--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -18,7 +18,7 @@
 	  <ion-card-content>
 	    <p><strong>LocoGypho</strong> is a client for <strong>Giphy</strong> that will endlessly <strong>stream GIFs</strong> given <strong>any query</strong>.</p>
 	    <br />
-	    <p>To play a GIF, just tap it. To view the original submission for any GIF, just tap the title section and it will open in reddit. You can configure some settings for the application below. Enjoy!</p>
+	    <p>To play a GIF, just tap it. To view the original submission for any GIF, just tap the title section and it will open in the Giphy website. You can configure some settings for the application below. Enjoy!</p>
 	  </ion-card-content>
 	</ion-card>
 
